gcc/testsuite/g++.dg/ext/typeof3.C
double f(double);
float f(float);
void h(typeof(f) g) {} // { dg-error "" }
 
